@@ -18,6 +18,7 @@
 package org.apache.hertzbeat.manager.service;
 
 import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertInstanceOf;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
@@ -25,10 +26,10 @@ import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyList;
-import static org.mockito.ArgumentMatchers.anyLong;
+import static org.mockito.Mockito.doAnswer;
 import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.doReturn;
-import static org.mockito.Mockito.inOrder;
+import static org.mockito.Mockito.doThrow;
 import static org.mockito.Mockito.spy;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
@@ -37,30 +38,46 @@ import static org.mockito.Mockito.when;
 import java.io.File;
 import java.io.FileOutputStream;
 import java.io.IOException;
+import java.lang.reflect.Field;
 import java.lang.reflect.Method;
+import java.net.URL;
+import java.net.URLClassLoader;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
+import java.util.concurrent.CountDownLatch;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+import java.util.concurrent.Future;
+import java.util.concurrent.TimeUnit;
+import java.util.concurrent.TimeoutException;
 import java.util.jar.JarEntry;
 import java.util.jar.JarOutputStream;
+import java.util.stream.Stream;
 import org.apache.hertzbeat.common.constants.PluginType;
+import org.apache.hertzbeat.common.entity.alerter.GroupAlert;
 import org.apache.hertzbeat.common.entity.manager.PluginItem;
 import org.apache.hertzbeat.common.entity.manager.PluginMetadata;
+import org.apache.hertzbeat.common.entity.plugin.PluginConfig;
 import org.apache.hertzbeat.common.support.exception.CommonException;
 import org.apache.hertzbeat.manager.dao.PluginItemDao;
 import org.apache.hertzbeat.manager.dao.PluginMetadataDao;
-import org.apache.hertzbeat.manager.dao.PluginParamDao;
 import org.apache.hertzbeat.manager.pojo.dto.PluginUpload;
 import org.apache.hertzbeat.manager.service.impl.PluginServiceImpl;
+import org.apache.hertzbeat.manager.service.plugin.AfterCommitPublisher;
+import org.apache.hertzbeat.manager.service.plugin.PluginArtifactLifecycle;
+import org.apache.hertzbeat.manager.service.plugin.PluginParameterRegistry;
+import org.apache.hertzbeat.plugin.Plugin;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.api.io.TempDir;
 import org.mockito.ArgumentCaptor;
-import org.mockito.InOrder;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
@@ -69,6 +86,8 @@ import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.jpa.domain.Specification;
 import org.springframework.mock.web.MockMultipartFile;
+import org.springframework.transaction.support.TransactionSynchronization;
+import org.springframework.transaction.support.TransactionSynchronizationManager;
 
 /**
  * Test case for {@link PluginService}
@@ -83,15 +102,19 @@ class PluginServiceTest {
     private PluginMetadataDao metadataDao;
 
     @Mock
-    private PluginParamDao pluginParamDao;
+    private PluginParameterService pluginParameterService;
 
     @Mock
     private PluginItemDao itemDao;
 
+    private PluginParameterRegistry pluginParameterRegistry;
 
     @BeforeEach
     void setUp() {
-        pluginService = new PluginServiceImpl(metadataDao, itemDao, pluginParamDao);
+        pluginParameterRegistry = new PluginParameterRegistry();
+        pluginService = new PluginServiceImpl(
+                metadataDao, itemDao, pluginParameterService, pluginParameterRegistry, new AfterCommitPublisher(),
+                new PluginArtifactLifecycle());
     }
 
     @Test
@@ -136,6 +159,79 @@ class PluginServiceTest {
     }
 
     @Test
+    void testSaveDisabledPluginPreservesRequestedStatus(@TempDir File tempDir) throws IOException {
+        PluginMetadata parsed = new PluginMetadata();
+        parsed.setItems(List.of(new PluginItem("org.apache.hertzbeat.DisabledPlugin", PluginType.POST_ALERT)));
+        parsed.setParamCount(0);
+        PluginServiceImpl service = spy(pluginService);
+        doReturn(parsed).when(service).validateJarFile(any());
+        String previousPluginLib = System.getProperty("hertzbeat.plugin.lib.dir");
+        System.setProperty("hertzbeat.plugin.lib.dir", tempDir.getAbsolutePath());
+        PluginUpload upload = new PluginUpload(new MockMultipartFile(
+                "file", "disabled.jar", "application/java-archive", new byte[]{1}), "Disabled Plugin", false);
+
+        try {
+            service.savePlugin(upload);
+        } finally {
+            if (previousPluginLib == null) {
+                System.clearProperty("hertzbeat.plugin.lib.dir");
+            } else {
+                System.setProperty("hertzbeat.plugin.lib.dir", previousPluginLib);
+            }
+        }
+
+        ArgumentCaptor<PluginMetadata> saved = ArgumentCaptor.forClass(PluginMetadata.class);
+        verify(metadataDao).save(saved.capture());
+        assertFalse(saved.getValue().getEnableStatus());
+    }
+
+    @Test
+    void persistenceFailureRemovesUploadedJarAndExtractedLibraries(@TempDir File tempDir) throws IOException {
+        PluginMetadata parsed = new PluginMetadata();
+        parsed.setItems(List.of(new PluginItem("org.apache.hertzbeat.FailedPlugin", PluginType.POST_ALERT)));
+        parsed.setParamCount(0);
+        PluginServiceImpl service = spy(pluginService);
+        doAnswer(invocation -> {
+            File uploaded = invocation.getArgument(0);
+            String path = uploaded.getAbsolutePath();
+            File extracted = new File(path.substring(0, path.lastIndexOf('.')));
+            Files.createDirectories(extracted.toPath());
+            Files.write(new File(extracted, "dependency.jar").toPath(), new byte[]{2});
+            return parsed;
+        }).when(service).validateJarFile(any());
+        doThrow(new IllegalStateException("database path /private/db failed"))
+                .when(metadataDao).save(any(PluginMetadata.class));
+        String previousPluginLib = System.getProperty("hertzbeat.plugin.lib.dir");
+        System.setProperty("hertzbeat.plugin.lib.dir", tempDir.getAbsolutePath());
+        PluginUpload upload = new PluginUpload(new MockMultipartFile(
+                "file", "failed.jar", "application/java-archive", new byte[]{1}), "Failed Plugin", true);
+
+        CommonException failure;
+        try {
+            failure = assertThrows(CommonException.class, () -> service.savePlugin(upload));
+        } finally {
+            if (previousPluginLib == null) {
+                System.clearProperty("hertzbeat.plugin.lib.dir");
+            } else {
+                System.setProperty("hertzbeat.plugin.lib.dir", previousPluginLib);
+            }
+        }
+
+        assertEquals("Failed to upload plugin", failure.getMessage());
+        assertFalse(failure.getMessage().contains("/private/"));
+        try (Stream<java.nio.file.Path> files = Files.list(tempDir.toPath())) {
+            assertEquals(0, files.count());
+        }
+    }
+
+    @Test
+    void rejectsBlankPluginNameAtServiceBoundary() {
+        PluginUpload upload = new PluginUpload(new MockMultipartFile(
+                "file", "blank-name.jar", "application/java-archive", new byte[]{1}), "  ", true);
+        assertThrows(CommonException.class, () -> pluginService.savePlugin(upload));
+    }
+
+    @Test
     void testUploadPluginWithInvalidName() {
         MockMultipartFile mockFile = new MockMultipartFile(
             "file", "../test-plugin.jar", "application/java-archive",
@@ -154,30 +250,356 @@ class PluginServiceTest {
 
     @Test
     void testUpdateStatus() {
-        PluginMetadata plugin = new PluginMetadata();
-        plugin.setId(1L);
-        plugin.setEnableStatus(true);
-        plugin.setName("test-plugin");
+        PluginMetadata persisted = PluginMetadata.builder()
+                .id(1L)
+                .name("persisted-plugin")
+                .enableStatus(false)
+                .jarFilePath("plugin-lib/persisted.jar")
+                .items(List.of())
+                .build();
+        PluginMetadata request = PluginMetadata.builder()
+                .id(1L)
+                .name("untrusted-name")
+                .enableStatus(true)
+                .jarFilePath("/untrusted/path.jar")
+                .build();
 
-        when(metadataDao.findById(1L)).thenReturn(Optional.of(plugin));
-        when(metadataDao.save(any(PluginMetadata.class))).thenReturn(plugin);
-        assertDoesNotThrow(() -> pluginService.updateStatus(plugin));
+        when(metadataDao.findById(1L)).thenReturn(Optional.of(persisted));
+        when(metadataDao.save(any(PluginMetadata.class))).thenReturn(persisted);
+        assertDoesNotThrow(() -> pluginService.updateStatus(request));
+
+        verify(metadataDao).save(persisted);
+        assertTrue(persisted.getEnableStatus());
+        assertEquals("persisted-plugin", persisted.getName());
+        assertEquals("plugin-lib/persisted.jar", persisted.getJarFilePath());
     }
 
     @Test
-    void testDeletePlugins() {
-        PluginMetadata plugin = new PluginMetadata();
-        plugin.setId(1L);
-        plugin.setJarFilePath("path/to/plugin.jar");
-        Set<Long> ids = new HashSet<>(Collections.singletonList(1L));
+    void rejectsIncompleteStatusRequestsAtServiceBoundary() {
+        assertThrows(IllegalArgumentException.class, () -> pluginService.updateStatus(null));
+        assertThrows(IllegalArgumentException.class,
+                () -> pluginService.updateStatus(PluginMetadata.builder().enableStatus(true).build()));
+        assertThrows(IllegalArgumentException.class,
+                () -> pluginService.updateStatus(PluginMetadata.builder().id(1L).build()));
+    }
 
-        when(metadataDao.findAllById(ids)).thenReturn(Collections.singletonList(plugin));
-        when(metadataDao.findById(anyLong())).thenReturn(Optional.of(plugin));
-        when(metadataDao.save(plugin)).thenReturn(plugin);
+    @Test
+    void testDeletePlugins(@TempDir File tempDir) throws IOException {
+        File firstJar = new File(tempDir, "plugin-one.jar");
+        File secondJar = new File(tempDir, "plugin-two.jar");
+        Files.write(firstJar.toPath(), new byte[]{1});
+        Files.write(secondJar.toPath(), new byte[]{2});
+        PluginMetadata first = PluginMetadata.builder()
+                .id(1L).enableStatus(true).jarFilePath(firstJar.getAbsolutePath()).items(List.of()).build();
+        PluginMetadata second = PluginMetadata.builder()
+                .id(2L).enableStatus(true).jarFilePath(secondJar.getAbsolutePath()).items(List.of()).build();
+        Set<Long> ids = new HashSet<>(Set.of(1L, 2L));
+
+        when(metadataDao.findAllById(ids)).thenReturn(List.of(first, second));
+        when(metadataDao.findById(1L)).thenReturn(Optional.of(first));
+        when(metadataDao.findById(2L)).thenReturn(Optional.of(second));
         doNothing().when(metadataDao).deleteById(1L);
+        doNothing().when(metadataDao).deleteById(2L);
 
-        pluginService.deletePlugins(ids);
-        verify(metadataDao, times(1)).deleteById(1L);
+        String previousPluginLib = System.getProperty("hertzbeat.plugin.lib.dir");
+        System.setProperty("hertzbeat.plugin.lib.dir", tempDir.getAbsolutePath());
+        TransactionSynchronizationManager.initSynchronization();
+        try {
+            pluginService.deletePlugins(ids);
+            assertTrue(firstJar.exists());
+            assertTrue(secondJar.exists());
+            TransactionSynchronizationManager.getSynchronizations()
+                    .forEach(TransactionSynchronization::afterCommit);
+        } finally {
+            TransactionSynchronizationManager.clearSynchronization();
+            if (previousPluginLib == null) {
+                System.clearProperty("hertzbeat.plugin.lib.dir");
+            } else {
+                System.setProperty("hertzbeat.plugin.lib.dir", previousPluginLib);
+            }
+        }
+        verify(metadataDao).deleteById(1L);
+        verify(metadataDao).deleteById(2L);
+        verify(pluginParameterService).deleteByPluginIds(ids);
+        assertFalse(first.getEnableStatus());
+        assertFalse(second.getEnableStatus());
+    }
+
+    @Test
+    @SuppressWarnings("unchecked")
+    void committedDeleteClosesRuntimeBeforeRemovingManagedArtifacts(@TempDir File tempDir) throws Exception {
+        File jar = new File(tempDir, "managed.jar");
+        Files.write(jar.toPath(), new byte[]{1});
+        File extracted = new File(tempDir, "managed");
+        Files.createDirectories(extracted.toPath());
+        PluginMetadata plugin = PluginMetadata.builder()
+                .id(73L).enableStatus(true).jarFilePath(jar.getAbsolutePath()).items(List.of()).build();
+        when(metadataDao.findAllById(Set.of(73L))).thenReturn(List.of(plugin));
+        when(metadataDao.findById(73L)).thenReturn(Optional.of(plugin));
+        when(metadataDao.findPluginMetadataByEnableStatusTrue()).thenReturn(List.of());
+        Field loadersField = PluginServiceImpl.class.getDeclaredField("pluginClassLoaders");
+        loadersField.setAccessible(true);
+        List<URLClassLoader> loaders = (List<URLClassLoader>) loadersField.get(pluginService);
+        BlockingClassLoader blockingLoader = new BlockingClassLoader();
+        loaders.add(blockingLoader);
+        String previousPluginLib = System.getProperty("hertzbeat.plugin.lib.dir");
+        System.setProperty("hertzbeat.plugin.lib.dir", tempDir.getAbsolutePath());
+        TransactionSynchronizationManager.initSynchronization();
+        ExecutorService executor = Executors.newSingleThreadExecutor();
+
+        try {
+            pluginService.deletePlugins(Set.of(73L));
+            assertTrue(jar.exists());
+            assertTrue(extracted.exists());
+            List<TransactionSynchronization> synchronizations =
+                    TransactionSynchronizationManager.getSynchronizations();
+            Future<?> completion = executor.submit(
+                    () -> synchronizations.forEach(TransactionSynchronization::afterCommit));
+            assertTrue(blockingLoader.closeEntered.await(5, TimeUnit.SECONDS));
+            assertTrue(jar.exists());
+            assertTrue(extracted.exists());
+            blockingLoader.allowClose.countDown();
+            completion.get(5, TimeUnit.SECONDS);
+            assertFalse(jar.exists());
+            assertFalse(extracted.exists());
+        } finally {
+            blockingLoader.allowClose.countDown();
+            executor.shutdownNow();
+            TransactionSynchronizationManager.clearSynchronization();
+            if (previousPluginLib == null) {
+                System.clearProperty("hertzbeat.plugin.lib.dir");
+            } else {
+                System.setProperty("hertzbeat.plugin.lib.dir", previousPluginLib);
+            }
+        }
+    }
+
+    @Test
+    void committedDeleteCleansArtifactsWhenRuntimeConvergenceFails(@TempDir File tempDir) throws IOException {
+        File jar = new File(tempDir, "convergence-failure.jar");
+        Files.write(jar.toPath(), new byte[]{1});
+        PluginMetadata plugin = PluginMetadata.builder()
+                .id(75L).enableStatus(true).jarFilePath(jar.getAbsolutePath()).items(List.of()).build();
+        when(metadataDao.findAllById(Set.of(75L))).thenReturn(List.of(plugin));
+        when(metadataDao.findById(75L)).thenReturn(Optional.of(plugin));
+        when(metadataDao.findPluginMetadataByEnableStatusTrue())
+                .thenThrow(new IllegalStateException("raw token and /private/runtime/path"));
+        String previousPluginLib = System.getProperty("hertzbeat.plugin.lib.dir");
+        System.setProperty("hertzbeat.plugin.lib.dir", tempDir.getAbsolutePath());
+        TransactionSynchronizationManager.initSynchronization();
+
+        try {
+            pluginService.deletePlugins(Set.of(75L));
+            List<TransactionSynchronization> synchronizations =
+                    TransactionSynchronizationManager.getSynchronizations();
+            assertDoesNotThrow(() -> synchronizations.forEach(TransactionSynchronization::afterCommit));
+            assertFalse(jar.exists());
+        } finally {
+            TransactionSynchronizationManager.clearSynchronization();
+            if (previousPluginLib == null) {
+                System.clearProperty("hertzbeat.plugin.lib.dir");
+            } else {
+                System.setProperty("hertzbeat.plugin.lib.dir", previousPluginLib);
+            }
+        }
+    }
+
+    @Test
+    void outsideDeletePathIsRejectedBeforeDatabaseMutation(@TempDir File tempDir) throws IOException {
+        File root = new File(tempDir, "plugin-root");
+        File outside = new File(tempDir, "external-token.jar");
+        Files.write(outside.toPath(), new byte[]{1});
+        PluginMetadata plugin = PluginMetadata.builder()
+                .id(74L).enableStatus(true).jarFilePath(outside.getAbsolutePath()).items(List.of()).build();
+        when(metadataDao.findAllById(Set.of(74L))).thenReturn(List.of(plugin));
+        String previousPluginLib = System.getProperty("hertzbeat.plugin.lib.dir");
+        System.setProperty("hertzbeat.plugin.lib.dir", root.getAbsolutePath());
+
+        try {
+            CommonException failure = assertThrows(CommonException.class,
+                    () -> pluginService.deletePlugins(Set.of(74L)));
+            assertEquals("Plugin artifact path is invalid", failure.getMessage());
+            assertFalse(failure.getMessage().contains(outside.getAbsolutePath()));
+        } finally {
+            if (previousPluginLib == null) {
+                System.clearProperty("hertzbeat.plugin.lib.dir");
+            } else {
+                System.setProperty("hertzbeat.plugin.lib.dir", previousPluginLib);
+            }
+        }
+        assertTrue(outside.exists());
+        verify(metadataDao, times(0)).deleteById(74L);
+    }
+
+    @Test
+    void rolledBackDeleteDoesNotPublishRegistryClassloaderOrStatusChanges(@TempDir File tempDir) {
+        PluginItem item = new PluginItem(RollbackMarker.class.getName(), PluginType.POST_ALERT);
+        PluginMetadata plugin = PluginMetadata.builder()
+                .id(71L)
+                .enableStatus(true)
+                .jarFilePath(new File(tempDir, "missing-plugin.jar").getAbsolutePath())
+                .items(List.of(item))
+                .build();
+        when(metadataDao.findById(71L)).thenReturn(Optional.of(plugin));
+        pluginService.updateStatus(plugin);
+        pluginParameterRegistry.registerDefinition(71L, new PluginConfig());
+        when(metadataDao.findAllById(Set.of(71L))).thenReturn(List.of(plugin));
+        String previousPluginLib = System.getProperty("hertzbeat.plugin.lib.dir");
+        System.setProperty("hertzbeat.plugin.lib.dir", tempDir.getAbsolutePath());
+
+        TransactionSynchronizationManager.initSynchronization();
+        try {
+            pluginService.deletePlugins(Set.of(71L));
+            assertTrue(pluginService.pluginIsEnable(RollbackMarker.class));
+            assertTrue(pluginParameterRegistry.definition(71L).isPresent());
+        } finally {
+            TransactionSynchronizationManager.clearSynchronization();
+            if (previousPluginLib == null) {
+                System.clearProperty("hertzbeat.plugin.lib.dir");
+            } else {
+                System.setProperty("hertzbeat.plugin.lib.dir", previousPluginLib);
+            }
+        }
+        assertTrue(pluginService.pluginIsEnable(RollbackMarker.class));
+        assertTrue(pluginParameterRegistry.definition(71L).isPresent());
+    }
+
+    @Test
+    @SuppressWarnings("unchecked")
+    void enablingPluginReloadsRuntimeOnlyAfterCommit(@TempDir File tempDir) throws Exception {
+        File jar = new File(tempDir, "enable-plugin.jar");
+        try (JarOutputStream output = new JarOutputStream(new FileOutputStream(jar))) {
+            output.putNextEntry(new JarEntry("define/plugin-define.yml"));
+            output.write("params:\n  - field: token\n    type: password\n".getBytes(StandardCharsets.UTF_8));
+            output.closeEntry();
+        }
+        PluginItem item = new PluginItem(RollbackMarker.class.getName(), PluginType.POST_ALERT);
+        PluginMetadata persisted = PluginMetadata.builder()
+                .id(72L).enableStatus(false).jarFilePath(jar.getAbsolutePath()).items(List.of(item)).build();
+        PluginMetadata request = PluginMetadata.builder().id(72L).enableStatus(true).build();
+        when(metadataDao.findById(72L)).thenReturn(Optional.of(persisted));
+        when(metadataDao.findPluginMetadataByEnableStatusTrue()).thenReturn(List.of(persisted));
+        String previousPluginLib = System.getProperty("hertzbeat.plugin.lib.dir");
+        System.setProperty("hertzbeat.plugin.lib.dir", tempDir.getAbsolutePath());
+        Field loadersField = PluginServiceImpl.class.getDeclaredField("pluginClassLoaders");
+        loadersField.setAccessible(true);
+        List<?> loaders = (List<?>) loadersField.get(pluginService);
+        int initialLoaderCount = loaders.size();
+
+        TransactionSynchronizationManager.initSynchronization();
+        try {
+            pluginService.updateStatus(request);
+            assertFalse(pluginService.pluginIsEnable(RollbackMarker.class));
+            assertTrue(pluginParameterRegistry.definition(72L).isEmpty());
+            assertEquals(initialLoaderCount, loaders.size());
+
+            TransactionSynchronizationManager.getSynchronizations()
+                    .forEach(synchronization -> synchronization.afterCommit());
+            assertTrue(pluginService.pluginIsEnable(RollbackMarker.class));
+            assertTrue(pluginParameterRegistry.definition(72L).isPresent());
+            assertEquals(initialLoaderCount + 1, loaders.size());
+        } finally {
+            TransactionSynchronizationManager.clearSynchronization();
+            if (previousPluginLib == null) {
+                System.clearProperty("hertzbeat.plugin.lib.dir");
+            } else {
+                System.setProperty("hertzbeat.plugin.lib.dir", previousPluginLib);
+            }
+        }
+    }
+
+    @Test
+    @SuppressWarnings("unchecked")
+    void executionWaitsWhileReloadClosesClassloaders() throws Exception {
+        Field loadersField = PluginServiceImpl.class.getDeclaredField("pluginClassLoaders");
+        loadersField.setAccessible(true);
+        List<URLClassLoader> loaders = (List<URLClassLoader>) loadersField.get(pluginService);
+        BlockingClassLoader blockingLoader = new BlockingClassLoader();
+        loaders.add(blockingLoader);
+        when(metadataDao.findPluginMetadataByEnableStatusTrue()).thenReturn(List.of());
+        Method reload = PluginServiceImpl.class.getDeclaredMethod("loadJarToClassLoader");
+        reload.setAccessible(true);
+        ExecutorService executor = Executors.newFixedThreadPool(2);
+
+        try {
+            Future<?> reloadFuture = executor.submit(() -> {
+                try {
+                    reload.invoke(pluginService);
+                } catch (ReflectiveOperationException exception) {
+                    throw new IllegalStateException(exception);
+                }
+            });
+            assertTrue(blockingLoader.closeEntered.await(5, TimeUnit.SECONDS));
+            Future<?> executeFuture = executor.submit(
+                    () -> pluginService.pluginExecute(Plugin.class, plugin -> { }));
+            assertThrows(TimeoutException.class, () -> executeFuture.get(200, TimeUnit.MILLISECONDS));
+
+            blockingLoader.allowClose.countDown();
+            reloadFuture.get(5, TimeUnit.SECONDS);
+            executeFuture.get(5, TimeUnit.SECONDS);
+        } finally {
+            blockingLoader.allowClose.countDown();
+            executor.shutdownNow();
+        }
+    }
+
+    @Test
+    @SuppressWarnings("unchecked")
+    void reloadWaitsUntilActivePluginCallbackCompletes(@TempDir File tempDir) throws Exception {
+        File providerJar = new File(tempDir, "callback-provider.jar");
+        try (JarOutputStream output = new JarOutputStream(new FileOutputStream(providerJar))) {
+            output.putNextEntry(new JarEntry("META-INF/services/" + Plugin.class.getName()));
+            output.write(CallbackPlugin.class.getName().getBytes(StandardCharsets.UTF_8));
+            output.closeEntry();
+        }
+        Field loadersField = PluginServiceImpl.class.getDeclaredField("pluginClassLoaders");
+        loadersField.setAccessible(true);
+        List<URLClassLoader> loaders = (List<URLClassLoader>) loadersField.get(pluginService);
+        BlockingClassLoader blockingLoader = new BlockingClassLoader(
+                new URL[]{providerJar.toURI().toURL()});
+        loaders.add(blockingLoader);
+        Field statusesField = PluginServiceImpl.class.getDeclaredField("PLUGIN_ENABLE_STATUS");
+        statusesField.setAccessible(true);
+        Map<String, Boolean> statuses = (Map<String, Boolean>) statusesField.get(null);
+        statuses.put(CallbackPlugin.class.getName(), true);
+        when(metadataDao.findPluginMetadataByEnableStatusTrue()).thenReturn(List.of());
+        Method reload = PluginServiceImpl.class.getDeclaredMethod("loadJarToClassLoader");
+        reload.setAccessible(true);
+        CountDownLatch callbackEntered = new CountDownLatch(1);
+        CountDownLatch allowCallback = new CountDownLatch(1);
+        ExecutorService executor = Executors.newFixedThreadPool(2);
+
+        try {
+            Future<?> execution = executor.submit(() -> pluginService.pluginExecute(Plugin.class, plugin -> {
+                callbackEntered.countDown();
+                try {
+                    allowCallback.await();
+                } catch (InterruptedException exception) {
+                    Thread.currentThread().interrupt();
+                    throw new IllegalStateException("Plugin callback interrupted");
+                }
+            }));
+            assertTrue(callbackEntered.await(5, TimeUnit.SECONDS));
+            Future<?> reloadFuture = executor.submit(() -> {
+                try {
+                    reload.invoke(pluginService);
+                } catch (ReflectiveOperationException exception) {
+                    throw new IllegalStateException(exception);
+                }
+            });
+
+            assertFalse(blockingLoader.closeEntered.await(200, TimeUnit.MILLISECONDS));
+            allowCallback.countDown();
+            execution.get(5, TimeUnit.SECONDS);
+            assertTrue(blockingLoader.closeEntered.await(5, TimeUnit.SECONDS));
+            blockingLoader.allowClose.countDown();
+            reloadFuture.get(5, TimeUnit.SECONDS);
+        } finally {
+            allowCallback.countDown();
+            blockingLoader.allowClose.countDown();
+            statuses.remove(CallbackPlugin.class.getName());
+            executor.shutdownNow();
+        }
     }
 
     @Test
@@ -186,32 +608,10 @@ class PluginServiceTest {
         when(metadataDao.findAll(any(Specification.class), any(PageRequest.class))).thenReturn(page);
         Page<PluginMetadata> result = pluginService.getPlugins(null, 0, 10);
         assertFalse(result.isEmpty());
-        verify(metadataDao, times(1)).findAll(any(Specification.class), any(PageRequest.class));
-    }
-
-    @Test
-    void testSavePluginParamFlushesDeleteBeforeInsert() {
-        List<org.apache.hertzbeat.manager.pojo.dto.PluginParam> params = List.of(
-            org.apache.hertzbeat.manager.pojo.dto.PluginParam.builder()
-                .pluginMetadataId(1L)
-                .field("endpoint")
-                .paramValue("https://example.invalid/hertzbeat-plugin-audit")
-                .type((byte) 1)
-                .build(),
-            org.apache.hertzbeat.manager.pojo.dto.PluginParam.builder()
-                .pluginMetadataId(1L)
-                .field("mode")
-                .paramValue("audit-only")
-                .type((byte) 1)
-                .build()
-        );
-
-        pluginService.savePluginParam(params);
-
-        InOrder inOrder = inOrder(pluginParamDao);
-        inOrder.verify(pluginParamDao).deletePluginParamsByPluginMetadataId(1L);
-        inOrder.verify(pluginParamDao).flush();
-        inOrder.verify(pluginParamDao).saveAll(params);
+        ArgumentCaptor<PageRequest> pageRequest = ArgumentCaptor.forClass(PageRequest.class);
+        verify(metadataDao).findAll(any(Specification.class), pageRequest.capture());
+        assertEquals(0, pageRequest.getValue().getPageNumber());
+        assertEquals(10, pageRequest.getValue().getPageSize());
     }
 
     @Test
@@ -236,7 +636,45 @@ class PluginServiceTest {
         });
 
         assertInstanceOf(IOException.class, exception);
-        assertTrue(exception.getMessage().contains("Zip Slip detected"));
+        assertEquals("Invalid plugin archive entry", exception.getMessage());
+    }
+
+    private static final class RollbackMarker {
+    }
+
+    private static final class BlockingClassLoader extends URLClassLoader {
+
+        private final CountDownLatch closeEntered = new CountDownLatch(1);
+
+        private final CountDownLatch allowClose = new CountDownLatch(1);
+
+        private BlockingClassLoader() {
+            this(new URL[0]);
+        }
+
+        private BlockingClassLoader(URL[] urls) {
+            super(urls, Plugin.class.getClassLoader());
+        }
+
+        @Override
+        public void close() throws IOException {
+            closeEntered.countDown();
+            try {
+                allowClose.await();
+            } catch (InterruptedException exception) {
+                Thread.currentThread().interrupt();
+                throw new IOException("Interrupted while closing plugin classloader");
+            }
+            super.close();
+        }
+    }
+
+    public static final class CallbackPlugin implements Plugin {
+
+        @Override
+        public void alert(GroupAlert alert) {
+            // No-op test provider.
+        }
     }
 
 }
